Temporary fix: remove description column from organization creation until DB is updated

--- a/public/onboarding-wireframe.html
+++ b/public/onboarding-wireframe.html
@@ -187,6 +187,9 @@
         <button id="saveResumeBtn" style="font-size:1.1em;padding:12px 40px;">Save & Resume Later</button>
         <span id="saveResumeFeedback" style="margin-left:16px;color:#16a34a;font-weight:500;display:none;">Progress saved!</span>
       </div>
+      <div style="text-align:center;margin-top:16px;">
+        <button id="finishOnboarding" class="wizard-next" style="padding:12px 40px;">Finish & Create Organization</button>
+      </div>
     </div>
   </div>
 </body>
