Fix admin login: update API_BASE to empty string and server response format to include user object

--- a/public/admin.html
+++ b/public/admin.html
@@ -981,7 +981,7 @@ document.getElementById('loginForm').addEventListener('submit', function(e) {
     </div>
 
     <script>
-        const API_BASE = 'https://golf-club-poc-2024-dth0c4hjd8ayfuf8.uksouth-01.azurewebsites.net/api';
+        const API_BASE = '';
         let authToken = localStorage.getItem('adminAuthToken');
         let currentAdmin = JSON.parse(localStorage.getItem('currentAdmin') || '{}');
 
