--- a/public/admin.html
+++ b/public/admin.html
@@ -1016,7 +1016,7 @@ document.getElementById('loginForm').addEventListener('submit', function(e) {
             const password = document.getElementById('adminPassword').value;
             
             try {
-                const response = await fetch(`${API_BASE}/login`, {
+                const response = await fetch('/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
