Add CMS and Screen endpoints - screen pairing, content delivery, and CMS authentication

--- a/public/cms.html
+++ b/public/cms.html
@@ -514,7 +514,7 @@
     </div>
 
     <script>
-        const API_BASE = 'https://golf-club-poc-2024-dth0c4hjd8ayfuf8.uksouth-01.azurewebsites.net/api';
+        const API_BASE = '';
         let authToken = localStorage.getItem('authToken');
         let currentUser = JSON.parse(localStorage.getItem('currentUser') || '{}');
 
