--- a/public/screen.html
+++ b/public/screen.html
@@ -334,7 +334,7 @@
     </div>
 
     <script>
-        const API_BASE = 'https://golf-club-poc-2024-dth0c4hjd8ayfuf8.uksouth-01.azurewebsites.net/api';
+        const API_BASE = '';
         let pairingCode = null;
         let isActivated = false;
         let currentImageIndex = 0;
