--- a/public/cms.html
+++ b/public/cms.html
@@ -357,7 +357,7 @@
                     <div style="display: flex; align-items: center; gap: 20px;">
                         <div style="display: flex; align-items: center; gap: 10px;">
                             <label for="siteSelector" style="font-weight: bold;">Site:</label>
-                            <select id="siteSelector" onchange="switchSite()" style="padding: 5px; border-radius: 4px; border: 1px solid #ddd;">
+                            <select id="siteSelector" onchange="switchSite()" style="padding: 5px; border-radius: 4px; border: 1px solid #ddd; min-width: 200px;">
                                 <option value="">Select Site...</option>
                             </select>
                         </div>
