Fix CMS: Don't auto-show content section on login - let user select site first

--- a/public/cms.html
+++ b/public/cms.html
@@ -644,8 +644,7 @@
             // Load sites for the current user
             loadSites();
             
-            // Show default section
-            showSection('news');
+            // Don't show any section by default - let user select site first
         }
 
         async function login(event) {
