Fix CMS site loading: Use correct /api/admin/sites endpoint

--- a/public/cms.html
+++ b/public/cms.html
@@ -530,7 +530,7 @@
         // Site management functions
         async function loadSites() {
             try {
-                const response = await apiCall('/admin/sites');
+                const response = await apiCall('/api/admin/sites');
                 if (response && response.success) {
                     const sites = response.data;
                     const selector = document.getElementById('siteSelector');
