--- a/public/admin.html
+++ b/public/admin.html
@@ -1227,7 +1227,7 @@
             document.getElementById(modalId).classList.add('active');
             
             if (modalId === 'siteModal') {
-                // Use the populateOrganizationSelect function that's called from loadOrganizations
+                loadOrganizationsForSelect();
             } else if (modalId === 'userModal') {
                 loadSitesForSelect();
             }
@@ -1540,6 +1540,25 @@
                 }
             } catch (error) {
                 console.error('Error loading sites for select:', error);
+            }
+        }
+
+        async function loadOrganizationsForSelect() {
+            try {
+                const response = await fetch(`${API_BASE}/admin/organizations`, {
+                    headers: { 'Authorization': `Bearer ${authToken}` }
+                });
+
+                if (response.ok) {
+                    const result = await response.json();
+                    // Extract organizations from the API response format {success: true, data: [...]}
+                    const organizations = result.success ? result.data : result;
+                    const select = document.getElementById('siteOrganization');
+                    select.innerHTML = '<option value="">Select Organization</option>' +
+                        organizations.map(org => `<option value="${org.id}">${org.name}</option>`).join('');
+                }
+            } catch (error) {
+                console.error('Error loading organizations for select:', error);
             }
         }
 
